force-app/main/default/objects/Payment_Details__c/Payment_Details__c.object-meta.xml
<CustomObject>
    <label>Payment Details</label>
    <nameField>
        <displayFormat>Payment-{0000}</displayFormat>
        <label>Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>