force-app/main/default/objects/Payment_Details__c/fields/Amount_Paid_Rs__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Rs__c</fullName>
    <label>Amount Paid Rs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>