force-app/main/default/objects/Payment_Details__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC</label>
    <referenceTo>KYC__c</referenceTo>
    <relationshipLabel>Payment Details</relationshipLabel>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>