force-app/main/default/objects/Payment_Details__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <label>Valid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>